--- a/guacamole.properties
+++ b/guacamole.properties
@@ -1,28 +1,38 @@
 # File: guac-config/properties/guacamole.properties
 
-# LDAP Parameters (modify as needed)
-ldap-hostname: ldap.school.edu.tw
-ldap-user-base-dn: dc=school,dc=edu,dc=tw
-ldap-group-base-dn: cn=groups,dc=school,dc=edu,dc=tw
-ldap-search-bind-dn: uid=root,cn=users,dc=school,dc=edu,dc=tw
-ldap-search-bind-password: your_password
-ldap-group-name-attribute: cn
-ldap-member-attribute: memberUid
-ldap-member-attribute-type: uid
+# (1) LDAP Parameters (modify as needed)
+# ldap-hostname: ldap.school.edu.tw
+# ldap-search-bind-dn: uid=root,cn=users,dc=school,dc=edu,dc=tw
+# ldap-search-bind-password: your_password
 
+# (2) User Related Parameters
+# ldap-user-base-dn: cn=users,dc=school,dc=edu,dc=tw
+# ldap-user-search-filter: (memberOf=CN=GuacUsers,OU=Groups,DC=example,DC=com)
+# ldap-username-attribute: uid
+# ldap-member-attribute: memberUid
+# ldap-member-attribute-type: uid
 
-# Recordings (refer to path in docker file)
+# (3) Group Related Parameters
+# ldap-group-base-dn: cn=groups,dc=school,dc=edu,dc=tw
+# ldap-group-search-filter: (&(objectClass=posixGroup)(|(cn=ADFP)(cn=rdp-*)))
+# ldap-group-name-attribute: cn
+
+# (4) ldap efficiency parameters
+# ldap-max-search-results: 1
+# ldap-operation-timeout: 5000
+
+# >> Recordings (refer to path in docker file)
 recording-search-path=/var/lib/guacamole/recordings
 
-# Define allowed languages
+# >> Define allowed languages
 allowed-languages: en
 
-# Session max timeout (in minutes)
-api-session-timeout: 1
+# >> Session and Security Settings
+api-session-timeout: 120
 #ban-max-invalid-attempts: 5
 #ban-address-duration: 300
 
-# Define log level for debugging
+# >> Define log level for debugging
 # log-level: trace
 
 
